--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     <div class="contact-card">
       <h2>10. Contact Us</h2>
       <p>If you have any questions about this Privacy Policy or your data, please reach out:</p>
-      <p><a href="mailto:contact@mystictarot.app">contact@mystictarot.app</a></p>
+      <p><a href="mailto:mystictarotapp@outlook.com">mystictarotapp@outlook.com</a></p>
     </div>
 
     <div class="divider"></div>
